--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p>September 2014 - Present</p>
         </div>
         <div class="col-md-6">
-          <img src="http://www.alachuacounty.us/Businesses/PublishingImages/Logos/StarterSpace.png" alt="" width="230px" height="150px" class="img-center">
+          <img src="https://gainesvilleobserved.files.wordpress.com/2014/03/start-space-gainesville-observed.jpg?w=300&h=234" alt="" width="210px" height="150px" class="img-center">
           <h4>University Outreach Director-<a href="http://starterspace.com/" class="link-underline"> Starter Space(Launchpad)</a></h4>
           <p>September 2014 - January 2015</p>
         </div>
