--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="home">
       <div class="jumbotron">
         <div class="container">
-          <h1>Hi, I'm Sara.</h1>
+          <h1>Hello, I'm Sara.</h1>
           <p class="lead">I like baking desserts, working out, robots, and cool movies.</p>
         </div>
       </div><!-- /.container -->
@@ -71,7 +71,9 @@
         <p> <br> </p>
         <p>I have lived over 7,546 days nonstop, so that's a new personal best.
         <br>Originally from Fort Lauderdale, but currently attending the University of Florida in Gainesville, FL.
+        <br>I am majoring in computer science engineering and minoring in mathematics.
         <br>I have an older sister and a younger brother, plus a little kitty and a big ol' dog.
+        <br>My last name is almost a country which I hope to someday rule, and my grandfather's second cousin is famous pop artist, <a href="https://en.wikipedia.org/wiki/Roy_Lichtenstein">Roy Lichtenstein.</a>
         <br>In my free time, I like playing video games, watching new (or old) movies, and making treats for the humans I care about.</p>
       </div>
     </section>
