--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <br>Originally from Fort Lauderdale, but currently attending the University of Florida in Gainesville, FL.
         <br>I am majoring in computer science engineering and minoring in mathematics.
         <br>I have an older sister and a younger brother, plus a little kitty and a big ol' dog.
-        <br>My last name is almost a country which I hope to someday rule, and my grandfather's second cousin is famous pop artist, <a href="https://en.wikipedia.org/wiki/Roy_Lichtenstein">Roy Lichtenstein.</a>
+        <br>My last name is almost a <a href="https://en.wikipedia.org/wiki/Liechtenstein">country</a>, which I hope to someday rule, and my grandfather's second cousin is famous pop artist, <a href="https://en.wikipedia.org/wiki/Roy_Lichtenstein">Roy Lichtenstein.</a>
         <br>In my free time, I like playing video games, watching new (or old) movies, and making treats for the humans I care about.</p>
       </div>
     </section>
