--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <a href="https://www.dropbox.com/home?preview=Resume.docx"><i class="fa fa-download fa-3x"></i></a>
               <h4>Resume</h4>
             </div>
-            <h5>This page was created by Sara Lichtenstein using HTML5, CSS, <a href="http://getbootstrap.com/" class="link-underline">Bootstrap</a>, and<a href="https://fortawesome.github.io/Font-Awesome/" class="link-underline"> Font Awesome Icons.</a></h5>
+            <h5>This page was created by Sara Lichtenstein using HTML, CSS, <a href="http://getbootstrap.com/" class="link-underline">Bootstrap</a>, and<a href="https://fortawesome.github.io/Font-Awesome/" class="link-underline"> Font Awesome Icons.</a></h5>
          </div>
       </section>
 
