--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse" >
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/Users/newlabradoor/Desktop/PersonalSite/main.html">Home</a></li>
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/about.html">About</a></li>
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/contact.html">Contact</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
