--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/main.html">Home</a></li>
-              <li class="active"><a href="/Users/newlabradoor/Desktop/PersonalSite/about.html">About</a></li>
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -70,8 +70,8 @@
                 <li><a href="http://www.christinagardner-mccune.com"> Dr. Christina Gardner-McCune </a></li>
                 <li><a href="http://botsgainesville.wixsite.com/home/vex"> Vex Initiative with Alachua County </a></li>
                 <ul style="list-style-type:square">
-                  <li> Work with undergraduates to develop their professional and social skills </li>
-                  <li> Work with K-12 students to help fosters engineering problem solving habits and garner interest in STEM fields </li>
+                  <li> Working with undergraduates to develop their professional and social skills </li>
+                  <li> Working with K-12 students to help fosters engineering problem solving habits and garner interest in STEM fields </li>
                 </ul>
               </ul>
               <li> Machine Intelligence Lab, 2015 - 2017 </li>
