--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/main.html">Home</a></li>
-              <li><a href="/Users/newlabradoor/Desktop/PersonalSite/about.html">About</a></li>
-              <li class="active"><a href="/Users/newlabradoor/Desktop/PersonalSite/contact.html">Contact</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -66,9 +66,10 @@
 
     <div class="container">
       <div class="container-fluid">
-        <div class="col-xs-6 col-sm-4" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"><a href="mailto:saralich@ufl.edu"> </a> </span> </button> <strong style="color:#ffffff;"> Email </strong> </div>
-        <div class="col-xs-6 col-sm-4" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-github" aria-hidden="true"><a href="https://github.com/saralich"> </a> </span> </button> <strong style="color:#ffffff;"> Github </strong> </div>
-        <div class="col-xs-6 col-sm-4" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-linkedin" aria-hidden="true"><a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"> </a> </span> </button> <strong style="color:#ffffff;"> LinkedIn </strong> </div>
+        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"><a href="mailto:saralich@ufl.edu"> </a> </span> </button> <strong style="color:#ffffff;"> Email </strong> </div>
+        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-github" aria-hidden="true"><a href="https://github.com/saralich"> </a> </span> </button> <strong style="color:#ffffff;"> Github </strong> </div>
+        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-linkedin" aria-hidden="true"><a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"> </a> </span> </button> <strong style="color:#ffffff;"> LinkedIn </strong> </div>
+        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-save" aria-hidden="true"><a href="https://www.dropbox.com/home?preview=SaraLichtensteinResume.docx"> </a> </span> <strong style="color:#ffffff"> Resume </strong> </div>
       </div>
     </div>
           <!-- Bootstrap core JavaScript
