--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
         <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"><a href="mailto:saralich@ufl.edu"> </a> </span> </button> <strong style="color:#ffffff;"> Email </strong> </div>
         <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-github" aria-hidden="true"><a href="https://github.com/saralich"> </a> </span> </button> <strong style="color:#ffffff;"> Github </strong> </div>
         <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="fa fa-linkedin" aria-hidden="true"><a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"> </a> </span> </button> <strong style="color:#ffffff;"> LinkedIn </strong> </div>
-        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-save" aria-hidden="true"><a href="https://www.dropbox.com/home?preview=SaraLichtensteinResume.docx"> </a> </span> <strong style="color:#ffffff"> Resume </strong> </div>
+        <div class="col-xs-6 col-sm-3" align="center"><button type="button" class="btn btn-default" aria-label="Center Align"> <span class="glyphicon glyphicon-save" aria-hidden="true"><a href="https://www.dropbox.com/home?preview=SaraLichtensteinResume.docx"> </a> </span> </button> <strong style="color:#ffffff"> Resume </strong> </div>
       </div>
     </div>
           <!-- Bootstrap core JavaScript
